# csdr-sstv

./: CMakeLists.txt
debian/: changelog  control
include/: csdr-sstv.hpp  modes.hpp  version.hpp
src/: CMakeLists.txt  csdr-sstv.cpp  modes.cpp  version.cpp
